--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap" rel="stylesheet"> 
+        <link rel="website icon" type="png" href="https://play-lh.googleusercontent.com/olAmuekrpuX4TRC1p_uqBY05Ci6uTbQhVx1RGpKGkBGrfil9F2qHP5maTsyGksED6zAG"/>
+
 </head>
 <body>
     <div class="container">
